--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="?attr/colorMainScreen"
+    android:background="?attr/clrMainScreen"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -90,7 +90,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
                 android:onClick="sendText"
-                android:text="@string/btnSendMensage"
+                android:text="@string/btnSendMessage"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/txtMensageText" />
@@ -103,7 +103,7 @@
                 android:layout_marginTop="20dp"
                 android:layout_marginEnd="10dp"
                 android:padding="5sp"
-                android:textColor="?attr/colorText"
+                android:textColor="?attr/clrText"
                 android:textSize="24sp"
                 android:visibility="invisible"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -148,7 +148,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
                 android:text="@string/tltSerial"
-                android:textColor="?attr/colorText"
+                android:textColor="?attr/clrText"
                 android:textSize="24sp"
                 app:layout_constraintBottom_toTopOf="@+id/scrollSerial"
                 app:layout_constraintStart_toStartOf="@+id/scrollSerial" />
@@ -178,7 +178,7 @@
                         android:id="@+id/lblSerial"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:textColor="?attr/colorText"
+                        android:textColor="?attr/clrText"
                         android:textSize="16sp" />
                 </LinearLayout>
             </ScrollView>
