--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -5,23 +5,26 @@
         <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
 
         <!-- Cores do sistema -->
-        <item name="colorMainScreen">@color/darkGrayHard</item>
-        <item name="colorText">@color/white</item>
-        <item name="colorHint">@color/white</item>
+        <item name="clrMainScreen">@color/BLACK</item>
+        <item name="clrText">@color/WHITE</item>
+        <item name="clrHint">@color/lightGray</item>
         <item name="clrScrViw_Border">@color/green_system</item>
 
         <!-- Cores botão padrão -->
-        <item name="clrStdBtn_Border">@color/white</item>
+        <item name="clrStdBtn_Border">@color/WHITE</item>
         <item name="clrStdBtn_Background">@color/green_system</item>
-        <item name="clrStdBtn_Text">@color/white</item>
+        <item name="clrStdBtn_Text">@color/WHITE</item>
 
         <!-- Cores botão configuração wifi -->
-        <item name="clrBtnConfig_Border">@color/white</item>
-        <item name="clrBtnConfig_Background">@color/darkGrayHard</item>
-        <item name="clrBtnConfig_Text">@color/white</item>
+        <item name="clrBtnConfig_Border">@color/green_system</item>
+        <item name="clrBtnConfig_Background">@color/BLACK</item>
+        <item name="clrBtnConfig_Text">@color/green_system</item>
 
         <!-- Cor label configuração wifi -->
         <item name="clrLblConfigWiFi">@color/green_system</item>
+
+        <!-- Cor do painel dos dados wi-fi -->
+        <item name="clrPanelConfigWiFi">@color/black_system</item>
 
     </style>
 
