--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -5,23 +5,26 @@
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
 
         <!-- Cores do sistema -->
-        <item name="colorMainScreen">@color/white</item>
-        <item name="colorText">@color/darkGray</item>
-        <item name="colorHint">@color/lightGray</item>
+        <item name="clrMainScreen">@color/white_system</item>
+        <item name="clrText">@color/darkGray</item>
+        <item name="clrHint">@color/lightGray</item>
         <item name="clrScrViw_Border">@color/blue_system</item>
 
         <!-- Cores botão padrão -->
         <item name="clrStdBtn_Border">@color/blue_system</item>
-        <item name="clrStdBtn_Background">@color/white</item>
+        <item name="clrStdBtn_Background">@color/WHITE</item>
         <item name="clrStdBtn_Text">@color/blue_system</item>
 
         <!-- Cores botão configuração wifi -->
-        <item name="clrBtnConfig_Border">@color/darkGray</item>
-        <item name="clrBtnConfig_Background">@color/white</item>
-        <item name="clrBtnConfig_Text">@color/darkGray</item>
+        <item name="clrBtnConfig_Border">@color/blue_system</item>
+        <item name="clrBtnConfig_Background">@color/WHITE</item>
+        <item name="clrBtnConfig_Text">@color/blue_system</item>
 
-        <!-- Cor label configuração wifi -->
+        <!-- Cor label configuração wifi -->handleMiddle
         <item name="clrLblConfigWiFi">@color/blue_system</item>
+
+        <!-- Cor do painel dos dados wi-fi -->
+        <item name="clrPanelConfigWiFi">@color/WHITE</item>
 
     </style>
     <style name="Theme.Base_Websocket" parent="Base.Theme.Base_Websocket" />
