--- a/app/src/main/res/layout/activity_configuration_wi_fi.xml
+++ b/app/src/main/res/layout/activity_configuration_wi_fi.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:background="?attr/clrMainScreen"
@@ -10,8 +11,9 @@
 
     <ScrollView
         android:id="@+id/ScrollView"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:fillViewport="true"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:paddingLeft="20dp"
         android:paddingTop="20dp"
         android:paddingRight="20dp"
@@ -22,9 +24,9 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
+            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_height="wrap_content">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
@@ -57,11 +59,19 @@
                 <Button
                     android:id="@+id/btnConnect"
                     style="@style/btnConfigWiFi"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
                     android:text="@string/btnConnect"
                     app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/tltConfigDevice"/>
+
+                <Button
+                    android:id="@+id/btnDoubt"
+                    style="@style/btnDoubt"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginEnd="10dp"
+                    android:onClick="viewTutorial"
+                    android:text="?"
+                    app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/tltConfigDevice" />
 
                 <LinearLayout
@@ -70,7 +80,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
                     android:background="@drawable/border_linear_layout"
-                    android:gravity="top|left"
+                    android:gravity="top"
                     android:orientation="vertical"
                     android:paddingLeft="15dp"
                     android:paddingTop="15dp"
@@ -130,6 +140,7 @@
 
                     <com.google.android.material.textfield.TextInputLayout
                         style="@style/txtConfigWiFi_Layout"
+                        android:layout_marginBottom="0dp"
                         app:placeholderText="8.8.8.8">
                         <com.google.android.material.textfield.TextInputEditText
                             style="@style/txtConfigWiFi_Edit"
@@ -142,13 +153,9 @@
                 <Button
                     android:id="@+id/btnSaveConfig"
                     style="@style/btnConfigWiFi"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
-                    android:layout_marginBottom="20dp"
                     android:onClick="saveConfig"
                     android:text="@string/btnSaveConfig"
-                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
@@ -160,7 +167,36 @@
                     android:onClick="returnMain"
                     app:layout_constraintBottom_toBottomOf="@+id/tltConfigurations"
                     app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="@+id/tltConfigurations"
                     app:srcCompat="@drawable/arrow_back_screen" />
+
+                <LinearLayout
+                    android:id="@+id/viewTutorial"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="30dp"
+                    android:orientation="vertical"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/btnSaveConfig">
+
+                    <TextView
+                        android:textColor="?attr/clrText"
+                        android:textSize="20sp"
+                        android:id="@+id/textView"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/txtDoubtTitle" />
+
+                    <TextView
+                        android:textColor="?attr/clrText"
+                        android:textSize="15sp"
+                        android:id="@+id/textView3"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/txtDoubt"
+                        android:typeface="monospace" />
+                </LinearLayout>
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
