--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -17,6 +17,7 @@
     <attr name="clrBtnConfig_Border" format="color"/>
     <attr name="clrBtnConfig_Background" format="color"/>
     <attr name="clrBtnConfig_Text" format="color"/>
+    <attr name="clrBtnConfig_RippleColor" format="color"/>
 
     <!-- Cor Label da EditText configuração wifi -->
     <attr name="clrLblConfigWiFi" format="color"/>
