--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,4 +19,7 @@
     <color name="darkGray">#444444</color>
     <color name="lightGray">#A8A3AA</color>
     <color name="navyBlue">#000080</color>
+
+    <!-- Box Stroke Default Color -->
+    <color name="mtrl_textinput_default_box_stroke_color">#A8A3AA</color>
 </resources>
